conformance/1.0.0/expected/errors/empty-label.cdx
<ExpectedError category=~syntax reason=~gloss-syn-empty-label/>
